--- a/frontEnd/src/css/postItem.css
+++ b/frontEnd/src/css/postItem.css
@@ -54,7 +54,8 @@ div.post > div.data {
 div.post > div.data > p.text {
   overflow-wrap: break-word;
   width: 100%;
-  margin: 4px 4px 4px 4px;
+  margin: 4px 0px 4px 5px;
+  padding-right: 3px;
 }
 div.post > div.data > img {
   width: 100%;
