--- a/frontEnd/src/css/welcomePage.css
+++ b/frontEnd/src/css/welcomePage.css
@@ -1,10 +1,18 @@
-div.text {
+div.welcome {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 600px;
+  width: 45%;
   font-size: 150%;
   text-align: center;
-  line-height: 600px;
-  height: 600px;
-  vertical-align: middle;
+  word-wrap: break-word;
+  margin: auto;
 }
 
 @media only screen and (max-width: 600px) {
+  div.welcome {
+    font-size: 120%;
+    width: 80%;
+  }
 }
