--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -1,5 +1,6 @@
 body {
   background-image: url("../src/media/backGround.jpg");
-  background-repeat: repeat;
+  /* background-repeat: repeat; */
   background-size: 1600px 1000px;
+  background-attachment: fixed;
 }
