--- a/frontEnd/src/css/profile.css
+++ b/frontEnd/src/css/profile.css
@@ -52,7 +52,7 @@ div.profile > p.createdat {
   padding: 20px 2px 2px 92px;
 }
 
-@media only screen and (max-width: 400px) {
+/* @media only screen and (max-width: 400px) {
   div.profile {
     background-color: #b4bbb8;
     display: flex;
@@ -88,4 +88,4 @@ div.profile > p.createdat {
     font-size: 130%;
     padding: 20px 2px 2px 40px;
   }
-}
+} */
