--- a/frontEnd/src/css/profile.css
+++ b/frontEnd/src/css/profile.css
@@ -1,3 +1,8 @@
+div.box {
+  background-color: #ccc;
+  border-color: grey;
+  height: 500px;
+}
 /* div.profile {
   background-color: #b4bbb8;
   display: flex;
