--- a/frontEnd/src/css/postItem.css
+++ b/frontEnd/src/css/postItem.css
@@ -5,6 +5,7 @@ div.post {
   width: 40%;
   margin: auto;
   margin-top: 50px;
+  margin-bottom: 50px;
   border: 2px solid #ccc;
 }
 div.post > div.User {
