--- a/frontEnd/src/css/postItem.css
+++ b/frontEnd/src/css/postItem.css
@@ -72,6 +72,7 @@ div.post > div.data > img {
     width: 70%;
     margin: auto;
     margin-top: 50px;
+    margin-bottom: 50px;
     border: 2px solid #ccc;
   }
 }
